<resources>
    <string name="app_name">CreditCardInput</string>
    <string name="action_settings">Settings</string>

    <string name="amex">American Express</string>
    <string name="aura">Aura</string>
    <string name="diners">Diners</string>
    <string name="elo">Elo</string>
    <string name="hipercard">Hipercard</string>
    <string name="redecardcredito">MasterCard</string>
    <string name="visacredito">Visa Crédito</string>
    <string name="visaelectron">Visa Electron</string>
    <string name="other">Other</string>

    <string name="edit_card">Other card</string>
    <string name="save_data">Save card</string>
    <string name="realize_payment">Pay</string>
    <string name="expiration">Expire date</string>
    <string name="cvv">CVV</string>
    <string name="owner_name">Owner name</string>
    <string name="owner_card">OWNER NAME</string>
    <string name="expiration_date">VALID THRU</string>
    <string name="portions">Portions</string>
    <string name="option_pay_using_other_card_chosen">You chose input another card</string>
    <string name="undo">Undo</string>
    <string name="hint_credit_expire_date">MM/YY</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hint_credit_card_2">Number</string>
    <string name="hint_credit_card_security_code_3">XXX</string>
    <string name="total">TOTAL</string>

    <string name="currency">$</string>
    <string name="hint_credit_card_flag">Choose a flag</string>
    <string name="invalid_credit_card_flag">You need choose a flag</string>
    <string name="choose_flag">Choose a credit card flag</string>
    <string name="nubank">Nubank</string>
    <string name="paypal">Paypal</string>
</resources>
