<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frg_input_card_front"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/view_front_card_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/default_card" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:clickable="false"
        android:paddingLeft="24dp"
        android:paddingRight="19dp">

        <movile.com.creditcardguide.view.FontFitTextView
            android:id="@+id/txt_number_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@android:color/transparent"
            android:tag="o"
            android:clickable="false"
            android:singleLine="true"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            mask:maxFontSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/gray_hard_text"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"/>


        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="0.38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_name_credit_card_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/owner_card"
                    android:textColor="@color/white"
                    android:shadowColor="@color/gray_hard_text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textSize="9sp" />

                <movile.com.creditcardguide.view.FontFitTextView
                    android:id="@+id/txt_name_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:tag="o"
                    android:clickable="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    mask:maxFontSize="15sp"
                    android:shadowColor="@color/gray_hard_text"
                    android:textAllCaps="true"
                    android:capitalize="characters"
                    android:inputType="textCapCharacters"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_expire_credit_card_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration_date"
                    android:clickable="false"
                    android:textColor="@color/white"
                    android:shadowColor="@color/gray_hard_text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:textSize="9sp" />


                <TextView
                    android:id="@+id/txt_expire_credit_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@android:color/transparent"
                    android:text="@string/hint_credit_expire_date"
                    android:singleLine="true"
                    android:tag="o"
                    android:clickable="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:shadowColor="@color/gray_hard_text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>